--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
    const redirectUri = encodeURIComponent(location.origin)
     const urlParams = new URLSearchParams(location.search)
    const code = urlParams.get('code')
-   console.log(code,'code')
+  if(code){
+    alert(code)
+  }
   
     const baseUrl = `https://open.weixin.qq.com/connect/oauth2/authorize`
     const url = `${baseUrl}?appid=${corpId}&redirect_uri=${redirectUri}&response_type=code&scope=snsapi_base#wechat_redirect`
